--- a/index.html
+++ b/index.html
@@ -375,6 +375,25 @@
 		<div class="col-sm-8">
 			<div class="item">
 				<h3 class="company">
+					StaticScript - TypeScript compiler
+				</h3>
+				<div class="date">
+					<span class="startDate">
+						2019-01-00
+					</span>
+					<span class="endDate">
+						- Present
+					</span>
+				</div>
+				<div class="website">
+					<a href="https://github.com/ovr/StaticScript">https://github.com/ovr/StaticScript</a>
+				</div>
+				<div class="summary">
+					<p>StaticScript is a language on top of TypeScript as frontend and LLVM as backend for code-generation to binary.</p>
+				</div>
+			</div>
+			<div class="item">
+				<h3 class="company">
 					GHubber - mobile client for GitHub
 				</h3>
 				<div class="date">
@@ -478,54 +497,54 @@
 					</li>
 				</ul>
 			</div>
-			<div class="item">
-				<h3 class="company">
-					Owl Framework
-				</h3>
-				<div class="date">
-					<span class="startDate">
-						2015-04-25
-					</span>
-					<span class="endDate">
-						- Present
-					</span>
-				</div>
-				<div class="website">
-					<a href="https://github.com/owl-framework/owl">https://github.com/owl-framework/owl</a>
-				</div>
-				<div class="summary">
-					<p>Owl is an extreme fast PHP framework powered by Zephir language and delivered as C-extension.</p>
-				</div>
-				<ul class="highlights">
-					<li>Framework ;)</li>
-					<li>Performance boost</li>
-				</ul>
-			</div>
-			<div class="item">
-				<h3 class="company">
-					Phalcon Module Skeleton
-				</h3>
-				<div class="date">
-					<span class="startDate">
-						2015-05-25
-					</span>
-					<span class="endDate">
-						- Present
-					</span>
-				</div>
-				<div class="website">
-					<a href="https://github.com/ovr/phalcon-module-skeleton">https://github.com/ovr/phalcon-module-skeleton</a>
-				</div>
-				<div class="summary">
-					<p>This is a skeleton application written on Phalcon framework with performance boost. This project created to develop applications in an easy way.</p>
-				</div>
-				<ul class="highlights">
-					<li>MVC ready!</li>
-					<li>Modules</li>
-					<li>API module</li>
-					<li>Admin module on backbone</li>
-				</ul>
-			</div>
+<!--			<div class="item">-->
+<!--				<h3 class="company">-->
+<!--					Owl Framework-->
+<!--				</h3>-->
+<!--				<div class="date">-->
+<!--					<span class="startDate">-->
+<!--						2015-04-25-->
+<!--					</span>-->
+<!--					<span class="endDate">-->
+<!--						- Present-->
+<!--					</span>-->
+<!--				</div>-->
+<!--				<div class="website">-->
+<!--					<a href="https://github.com/owl-framework/owl">https://github.com/owl-framework/owl</a>-->
+<!--				</div>-->
+<!--				<div class="summary">-->
+<!--					<p>Owl is an extreme fast PHP framework powered by Zephir language and delivered as C-extension.</p>-->
+<!--				</div>-->
+<!--				<ul class="highlights">-->
+<!--					<li>Framework ;)</li>-->
+<!--					<li>Performance boost</li>-->
+<!--				</ul>-->
+<!--			</div>-->
+<!--			<div class="item">-->
+<!--				<h3 class="company">-->
+<!--					Phalcon Module Skeleton-->
+<!--				</h3>-->
+<!--				<div class="date">-->
+<!--					<span class="startDate">-->
+<!--						2015-05-25-->
+<!--					</span>-->
+<!--					<span class="endDate">-->
+<!--						- Present-->
+<!--					</span>-->
+<!--				</div>-->
+<!--				<div class="website">-->
+<!--					<a href="https://github.com/ovr/phalcon-module-skeleton">https://github.com/ovr/phalcon-module-skeleton</a>-->
+<!--				</div>-->
+<!--				<div class="summary">-->
+<!--					<p>This is a skeleton application written on Phalcon framework with performance boost. This project created to develop applications in an easy way.</p>-->
+<!--				</div>-->
+<!--				<ul class="highlights">-->
+<!--					<li>MVC ready!</li>-->
+<!--					<li>Modules</li>-->
+<!--					<li>API module</li>-->
+<!--					<li>Admin module on backbone</li>-->
+<!--				</ul>-->
+<!--			</div>-->
 		</div>
 	</section>
 
