--- a/index.html
+++ b/index.html
@@ -92,18 +92,8 @@
 								</a>
 							</div>
 							<div class="item">
-								<a href="https://plus.google.com/107677152861707550702/posts" target="_blank">
-								<icon class="entypo-googleplus"></icon>
-								</a>
-							</div>
-							<div class="item">
 								<a href="skype:dmtry.me?chat">
 								<icon class="entypo-skype"></icon>
-								</a>
-							</div>
-							<div class="item">
-								<a href="https://www.upwork.com/users/~01f776a35170a10064" target="_blank">
-									<div class="upwork"></div>
 								</a>
 							</div>
 						</section>
@@ -120,7 +110,7 @@
 							Over the last 8+ years I have developed different information systems including Web sites using many technologies such as: PHP/GO/C++/C, JS (React/Redux/Webpack/Flow/Babel) & React-Native, PostgreSQL/MySQL/Mongo, Redis/Memcached, Docker/Vagrant, SphinxSearch/ElasticSearch and many others.
 						</p>
 						<p>
-							Vagrant/Docker I could tell you about it, but THAT would NOT be a “length-limited” conversation!
+							React-Native I could tell you about it, but THAT would NOT be a “length-limited” conversation!
 						</p>
 					</div>
 				</div>
@@ -149,7 +139,7 @@
 						2018 (February)
 					</span>
 					<span class="endDate">
-						- Present
+						2019 (October)
 					</span>
 				</div>
 				<div class="website">
@@ -157,7 +147,14 @@
 				</div>
 				<div class="summary">
 					<p>Helping institutions and organisations to develop a marketplace, provide innovative financial services and accept payments worldwide.</p>
+					<p>What I did on the project:</p>
 				</div>
+				<ul class="highlights">
+					<li>Wrote a lot of microservices, and did the central micoservice called wallet (transactions)</li>
+					<li>Implement a prototype, next new generation of mobile app on React-Native (signle database for multiple bank/clients)</li>
+					<li>Move the whole system and all teams to new CI/CD powered on top of GitLabCI</li>
+					<li>Worked with Architect on huge improvements and next design related backend</li>
+				</ul>
 			</div>
 			<div class="item">
 				<h3 class="name">
