--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
 					<p>What I did on the project:</p>
 				</div>
 				<ul class="highlights">
-					<li>Wrote a lot of microservices, and did the central micoservice called wallet (transactions)</li>
-					<li>Implement a prototype, next new generation of mobile app on React-Native (signle database for multiple bank/clients)</li>
+					<li>Wrote a lot of microservices, and did the central microservice called wallet (processing bank transactions)</li>
+					<li>Implement a prototype of next new generation mobile app on React-Native (single code-base for multiple bank/clients)</li>
 					<li>Move the whole system and all teams to new CI/CD powered on top of GitLabCI</li>
-					<li>Worked with Architect on huge improvements and next design related backend</li>
+					<li>Worked with Architect on huge improvements and next design of backend</li>
 				</ul>
 			</div>
 			<div class="item">
