--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 						2018 (February)
 					</span>
 					<span class="endDate">
-						2019 (October)
+						- 2019 (October)
 					</span>
 				</div>
 				<div class="website">
