--- a/index.html
+++ b/index.html
@@ -593,6 +593,27 @@
 			<div class="item">
 				<div class="item">
 					<div class="name">
+						<h3>Разработка компилятора для TypeScript на TypeScript на базе LLVM</h3>
+					</div>
+					<div class="publisher">
+						<p class="lead">HolyJS Moscow 2019</p>
+					</div>
+					<div class="date">
+						2019-11-08
+					</div>
+					<div class="website">
+						<iframe width="100%" height="455" src="https://www.youtube.com/watch?v=9sHkSZkKk2c" frameborder="0" allowfullscreen></iframe>
+					</div>
+					<div class="summary">
+						<p>
+							В начале доклада мы затронем различные архитектуры от интерпретатора до JIT-компилятора, узнаем зачем нужен bytecode и сделаем интерпретатор байт-кода от V8 на JS в браузере. Получив базовые представления, мы окунемся в тему написания компилятора для TypeScript.
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="item">
+				<div class="item">
+					<div class="name">
 						<h3>Микросервисная архитектура</h3>
 					</div>
 					<div class="publisher">
